# cvxpygen

./: .gitignore  .gitmodules  MANIFEST.in  README.md  cvxpygen.py  docu.py  environment.yml  example.py  example_main.py  example_test.py  gen.py  main.py  pyproject.toml  setup.cfg  setup.py  simple_test.py  test.py  utils.py
.github/workflows/: CI.yml  doc.yml
HWGen/: .gitignore  Makefile  README.md
HWGen/codegen_pdaqp_cached/: config.json
HWGen/codegen_pdaqp_cached/include/: pdaqp_config.vh  pdaqp_feedbacks.mem  pdaqp_halfplanes.mem  pdaqp_hp_list.mem  pdaqp_jump_list.mem  pdaqp_timing.vh
HWGen/codegen_pdaqp_cached/reports/: verilator_lint.rpt
HWGen/codegen_pdaqp_cached/rtl/: pdaqp_bst_lut.v  pdaqp_cache_l1.v  pdaqp_cache_l2.v  pdaqp_constraint_checker.v  pdaqp_top.v
HWGen/codegen_pdaqp_cached/scripts/: synth.tcl
HWGen/codegen_pdaqp_cached/testbench/: tb_pdaqp_bst_lut.v  tb_pdaqp_cached.v  tb_pdaqp_top.v
HWGen/codegen_pid/: pdaqp.c  pdaqp.h
HWGen/mpc_re/: pdaqp.c  pdaqp.h
HWGen/power/: pdaqp.h
HWGen/regression/: pdaqp.c  pdaqp.h
HWGen/regression/benchmark/: pdaqp_benchmark.ipynb
HWGen/regression/c_tb/: sim_main.cpp
HWGen/regression/include/: pdaqp_config.vh  pdaqp_feedbacks.mem  pdaqp_halfplanes.mem  pdaqp_hp_list.mem  pdaqp_jump_list.mem
HWGen/regression/rtl/: pdaqp_bst_lut.v  pdaqp_top.v
HWGen/regression/tb/: pdaqp_tb.v
HWGen/scripts/: README.md  __init__.py  auto_select_generator.py  generate.py  generate_cached.py  generate_hybrid_parallel.py  generate_nonpipe_hardware.py  generate_parameter_level.py  generate_solution_level.py  generate_unconstrained.py  generate_verilator_testbench.py  pdaqp_constraint_gen.py
HWGen/scripts/bst_sol/: __init__.py
HWGen/scripts/bst_sol/common/: __init__.py  bst_builder.py  config_parser.py  test_bst_builder.py  test_rtl_generation.py
HWGen/scripts/config/: __init__.py  converters.py  generate_config.py  parsers.py  writers.py
HWGen/scripts/interface/: __init__.py  config_parser.py  generate_interface.py  packing_strategy.py  timing_generator.py  top_generator.py
HWGen/scripts/sw_scripts/: GPU_bench.py  generate_pdaqp_benchmark.py  generate_pdaqp_files.py
HWGen/scripts/sw_tb_gen/: Makefile  run_simulation.sh
TEMPLATE/: CMakeLists.txt  README.html  cpg_solver.py  setup.py
TEMPLATE/c/: CMakeLists.txt
TEMPLATE/c/include/: cpg_solve.h  cpg_workspace.h
TEMPLATE/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
TEMPLATE/cpp/: cpg_module.cpp
TEMPLATE/cpp/src/: cpg_module.cpp
TEMPLATE/include/: cpg_solve.h  cpg_types.h  cpg_update.h  cpg_workspace.h  solve.h  types.h  update.h
TEMPLATE/src/: cpg_example.c  cpg_module.cpp  cpg_solve.c  cpg_update.c  cpg_workspace.c  example.c  solve.c  update.c  work.c
cvxpygen/: __init__.py  canonicalizer.py  compiler.py  cpg.py  generator.py  mappings.py  mpqp.py  solvers.py  utils.py  writer.py
cvxpygen/hwgen/: codegen.py  decode.py  firmware_models.py  hw_models.py  implement.py  models.py
cvxpygen/hwgen/c_parsing/: array_visitor.py  grammars.py  header_visitor.py
cvxpygen/solvers/: __init__.py  _interface.py  clarabel.py  ecos.py  interface.py  osqp.py  pdaqp.py  qoco.py  scs.py
cvxpygen/template/: CMakeLists.txt  LICENSE  README.html  setup.py
cvxpygen/template/grad/: cpg_osqp_grad_compute.c  cpg_osqp_grad_compute.h  cpg_osqp_grad_workspace.h
cvxpygen/templates/: CMakeLists.txt.jinja2  README.html.jinja2  cpg_example.c.jinja2  cpg_module.hpp.jinja2  cpg_osqp_grad_compute.c.jinja2  cpg_osqp_grad_compute.h.jinja2  cpg_osqp_grad_workspace.h.jinja2  cpg_solver.py.jinja2  setup.py.jinja2
doc/source/: conf.py  index.md  install.md
doc/source/examples/: index.md
examples/: ADP.ipynb  MPC.ipynb  PDA-QP-Algorithm-to-FPGA-design-workflow.ipynb  actuator.ipynb  charging.ipynb  main.py  nLS.py  network.ipynb  playground.ipynb  portfolio.ipynb  resource.ipynb
examples/paper_grad/: ADP.py  elasticnet.py  portfolio.py  prices.csv
examples/visualization/: actuator.py  network.py  resource.py
template/: CMakeLists.txt  README.html  setup.py
test-vectors/: README.md
test-vectors/power/: pdaqp.c
tests/: test_E2E_LP.py  test_E2E_LP_gen.py  test_E2E_LP_solve.py  test_E2E_QP.py  test_E2E_QP_gen.py  test_E2E_QP_solve.py  test_E2E_SOCP.py  test_MPQP.py  test_diff.py  test_explicit.py  test_invalid_input.py  test_readme.py  test_stub_gen.py  test_unsupported_solvers.py  utils_test.py
tests/hwgen/: test_firmware_codegen.py  test_full_parsing.py  test_hwacc_codegen.py  test_implement.py  test_parse_c_file.py  test_parse_c_header.py
(+36 files in other folders)
